Fixed image height and  alignment ( 4588 )

--- a/css/common/segment-cards.less
+++ b/css/common/segment-cards.less
@@ -31,6 +31,7 @@ li {
 			border-radius         : 3px 3px 0 0;
 		    -moz-border-radius    : 3px 3px 0 0;
 		    -webkit-border-radius : 3px 3px 0 0;
+		    overflow              : hidden;
 
 			a {
 				padding         : 0;
@@ -58,6 +59,7 @@ li {
 				img {
 					width                 : 100%;
 					min-height            : @sc-image-height;
+					height                : @sc-image-height;
 					border-radius         : 3px 3px 0 0;
 		            -moz-border-radius    : 3px 3px 0 0;
 		            -webkit-border-radius : 3px 3px 0 0;
@@ -89,6 +91,7 @@ li {
 				line-height    : 1.3;
 				cursor         : default;
 				margin-bottom  : 2px;
+				height         : 80px;
 			}
 
 			p.sc-duration {
